--- a/Notes/src/main/resources/templates/note/list.html
+++ b/Notes/src/main/resources/templates/note/list.html
@@ -37,12 +37,13 @@
 		</div>
 	</nav>
 
-	<div class="container col-md-6 mb-2">
+	<div class="container col-md-8 mb-2">
 		<div class="row">
 			<div class="col-12 d-flex justify-content-center mt-3 mb-3 list-patients">PATIENT&nbsp;<span th:utext="${patientId}"></span>&nbsp;- note list </div>
 			<table class="table table-bordered">
 				<thead>
 					<tr class="table-success">
+						<th class="text-center">Date</th>
 						<th class="text-center">Note Id</th>
 						<th class="text-center">Note</th>
 						<th class="text-center">Action</th>
@@ -54,10 +55,11 @@
 						<td>No Notes on a list for patient <span th:utext="${patientId}" style="font-weight: 700;"></span></td>
 					</tr>
 					<tr class="text-center" th:each="note : ${noteList}">
-						<td style="width: 12%" th:text="${note.id}" class="align-middle"></td>
+						<td th:text="*{#dates.format(note.dateOfNote, 'dd-MMM-yyyy HH:mm')}" class="align-middle"></td>
+						<td th:text="${note.id}" class="align-middle"></td>
 						<td class="align-middle" th:text="${#strings.abbreviate(note.noteText, 40)}"></td>
 						<td style="width: 35%" class="align-middle">
-						    <a th:href="@{/note/view/{patientId}/{id} (patientId=${patientId}, id=${note.id})}" class="btn btn-outline-success btn-sm">View Note</a>&nbsp;|&nbsp;
+						    <a th:href="@{/note/view/{patientId}/{id} (patientId=${patientId}, id=${note.id})}" class="btn btn-outline-success btn-sm" data-toggle="modal" data-target="#exampleModalCenter">View Note</a>&nbsp;|&nbsp;
 						    <a th:href="@{/note/update/{patientId}/{id} (patientId=${patientId}, id=${note.id})}" class="btn btn-outline-success btn-sm">Edit Note</a>&nbsp;|&nbsp;
 							<a th:href="@{/note/delete/{patientId}/{id} (patientId=${patientId}, id=${note.id})}" class="btn btn-outline-danger btn-sm">Delete Note</a></td>
 					</tr>               
@@ -75,7 +77,7 @@
 			font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, serif;
 			font-size: 30px;
 			color: #28a745;
-			}
+			}	
 	</style>
 	
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
