--- a/Patients/src/main/resources/templates/patient/list.html
+++ b/Patients/src/main/resources/templates/patient/list.html
@@ -63,14 +63,14 @@
 						<td> No Patients on a list </td>
 					</tr>
 					<tr class="text-center" th:each="patient : ${patientList}">
-						<td style="width: 10%" th:text="${patient.id}" class="align-middle"></td>
+						<td th:text="${patient.id}" class="align-middle"></td>
 						<td th:text="${patient.familyName}" class="align-middle"></td>						
 						<td th:text="${patient.givenName}" class="align-middle"></td>
 						<td th:text="${patient.dob}" class="align-middle"></td>
 						<td th:text="${patient.sex}" class="align-middle"></td>
 						<td th:text="${patient.address}" class="align-middle"></td>
 						<td th:text="${patient.phone}" class="align-middle"></td>
-						<td style="width: 28%">
+						<td>
 							<a class="btn btn-outline-info btn-sm" th:href="@{/patient/update/{id}(id=${patient.id})}"></i>Edit Patient</a>&nbsp;|&nbsp;
 							<a class="btn btn-outline-danger btn-sm" th:href="@{/patient/delete/{id}(id=${patient.id})}">Delete Patient</a>
 						</td>
