--- a/Notes/src/main/resources/templates/note/list.html
+++ b/Notes/src/main/resources/templates/note/list.html
@@ -59,7 +59,7 @@
 						<td th:text="${note.id}" class="align-middle"></td>
 						<td class="align-middle" th:text="${#strings.abbreviate(note.noteText, 40)}"></td>
 						<td style="width: 35%" class="align-middle">
-						    <a th:href="@{/note/view/{patientId}/{id} (patientId=${patientId}, id=${note.id})}" class="btn btn-outline-success btn-sm" data-toggle="modal" data-target="#exampleModalCenter">View Note</a>&nbsp;|&nbsp;
+						    <a th:href="@{/note/view/{patientId}/{id} (patientId=${patientId}, id=${note.id})}" class="btn btn-outline-success btn-sm">View Note</a>&nbsp;|&nbsp;
 						    <a th:href="@{/note/update/{patientId}/{id} (patientId=${patientId}, id=${note.id})}" class="btn btn-outline-success btn-sm">Edit Note</a>&nbsp;|&nbsp;
 							<a th:href="@{/note/delete/{patientId}/{id} (patientId=${patientId}, id=${note.id})}" class="btn btn-outline-danger btn-sm">Delete Note</a></td>
 					</tr>               
