--- a/Reports/src/main/resources/templates/report/appearances.html
+++ b/Reports/src/main/resources/templates/report/appearances.html
@@ -46,7 +46,7 @@
 	</nav>	
 	<div class="container col-md-12 mb-2 mt-4">
 		<div class="row">
-			<div class="col-12 d-flex justify-content-center mt-3 mb-3 list-patientsReports">PATIENT&nbsp;<span th:utext="${patientId}"></span>&nbsp;- report list </div>
+			<div class="col-12 d-flex justify-content-center mt-3 mb-3 list-patientsReports">PATIENT&nbsp;<span th:utext="${patientId}"></span>&nbsp;- report </div>
 					
 			<form action="#" class="form-horizontal" style="width: 100%">
 				<div class="form-group">
